--- a/br_test_market_close/css/core.main.css
+++ b/br_test_market_close/css/core.main.css
@@ -937,7 +937,13 @@
   font-size: var(--text-size-xxs);
   line-height: 1.25; }
   .dc-field--error {
-    padding-left: 1rem; }
+    padding-left: 1rem;
+    font-size: 1.2rem;
+    color: var(--text-loss-danger);
+    font-weight: 400;
+    text-transform: none;
+    text-align: left;
+    line-height: 1.25; }
   .dc-field--warn {
     padding-left: 1.2rem;
     padding-top: 0.4rem;
@@ -8481,9 +8487,8 @@
   .dc-dropdown__display--has-suffix-icon {
     width: 21rem;
     padding-left: 3rem;
+    padding-right: 0;
     justify-content: start; }
-    .dc-dropdown__display--has-suffix-icon-text {
-      padding-right: 0 !important; }
   .dc-dropdown__display--is-left-text {
     justify-content: flex-start; }
     .dc-dropdown__display--is-left-text .dc-dropdown__display-text {
@@ -8564,11 +8569,12 @@
   .dc-dropdown:active .dc-dropdown__select-arrow, .dc-dropdown:focus .dc-dropdown__select-arrow, .dc-dropdown--show .dc-dropdown__select-arrow {
     color: var(--text-general); }
 
-.dc-dropdown--error .dc-dropdown__display {
-  border-color: var(--brand-red-coral) !important; }
-
-.dc-dropdown--error .dc-dropdown__label {
-  color: var(--brand-red-coral) !important; }
+.dc-dropdown--error {
+  margin-bottom: -1.8rem; }
+  .dc-dropdown--error .dc-dropdown__display {
+    border-color: var(--brand-red-coral) !important; }
+  .dc-dropdown--error .dc-dropdown__label {
+    color: var(--brand-red-coral) !important; }
 
 .dc-dropdown__list {
   left: 0;
@@ -9841,6 +9847,148 @@
 /**
  * Define Breakpoints here.
  */
+.dc-form-cancel-button {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  align-self: flex-start; }
+  .dc-form-cancel-button:only-child {
+    width: 100%; }
+  .dc-form-cancel-button .dc-btn {
+    margin: 0 0.8rem; }
+    .dc-form-cancel-button .dc-btn:first-child {
+      margin-left: 0; }
+    .dc-form-cancel-button .dc-btn:last-child {
+      margin: 0; }
+  .dc-form-cancel-button--absolute {
+    bottom: 0;
+    position: absolute;
+    left: 0;
+    padding: 1.6rem; }
+  .dc-form-cancel-button--center {
+    justify-content: center;
+    width: 100%;
+    height: 100%; }
+    .dc-form-cancel-button--center .btn {
+      min-width: 9rem; }
+  @media (min-width: 320px) and (max-width: 767px) {
+    .dc-form-cancel-button--absolute {
+      background-color: var(--general-section-2);
+      top: unset;
+      bottom: -0.4rem;
+      left: 0;
+      position: absolute;
+      padding: 1.6rem;
+      border-top: 2px solid var(--general-disabled);
+      max-height: 70px;
+      width: 100%; }
+      .dc-form-cancel-button--absolute .dc-btn {
+        height: 40px;
+        width: 100%; } }
+
+/*------------------------------------*
+ *  # Constants
+ *------------------------------------*/
+/* stylelint-disable color-no-hex */
+/* COLOR PALETTE */
+/* colors */
+/* alpha colors */
+/* gradient colors */
+/* Preserve legacy variables */
+/* Primary */
+/* stylelint-enable color-no-hex */
+/* Wallet gradient background */
+/* App Cards gradient background */
+/*------------------------------------*
+ *  # SASS Mixins and Functions
+ *------------------------------------*/
+/*
+ * SASS interpolation
+ */
+/*
+ * PX to EM
+ * @param $px - px value to be converted
+ * @param $base - base font size (in `em`)
+ * Note: 'em' values are calculate based on the element font-size
+ *       to properly converts 'px' to 'em', please pass in the element font-size with it
+ * Usage example:
+    padding: em(16px, 1.6em); // font-size in 'em'
+ */
+/*
+ * Set property by passing a property name, and values.
+ * @param $property name - padding, margin etc.
+ * @param $values        - values in `px` (space separated for multiple values)
+ * @param $font-size     - base font-size in `em`
+ * Usage example:
+   @include toEm(padding, 8px 16px 8px, 1.6em);
+ */
+/*
+ * Generate typefaces key-value pair of variable name and config
+ * Example:
+   --paragraph-center-bold-black: (14px, center, bold, black)
+ */
+/*
+ * Sets font-size, font-weight, color, text-transform, text-align and line-height
+ * Usage example:
+   @include setTypeface(16px, bold, black, uppercase);
+ */
+/*
+ * Set typefaces by passing a typeface variable name
+ * @param $var   - typeface variable
+ * @param $tt    - text-transform property
+ * @param $align - text-align property
+ * Usage example:
+   @include typeface(--paragraph-bold-black, uppercase, center);
+ */
+/*
+ * Range Slider Thumb styling is set here
+ */
+/*
+ * SVG icons colors
+ */
+/*
+ * Bar Spinner Animation
+ * @param $count    - number of bars
+ * @param $duration - duration of animation
+ * @param $phase    - each bar phase change delay
+ * Usage example:
+   @include createBarspinnerAnimation(5, 1.2s, 0,1);
+ */
+/*
+ * Tooltip colors
+ * @param $color - color property
+ * Usage example:
+   @include tooltipColor($COLOR_RED);
+ */
+/*
+ * Convert Tooltip colors
+ * @param $color - css color property
+ * Usage example:
+   @include convertTooltipColor(var(--status-default));
+ */
+/*
+    Constants
+*/
+/*
+    Variables
+*/
+/*
+    List of all typefaces variables in the format: --$FONT_SIZES-$TEXT_ALIGN-$FONT_WEIGHTS-COLORS.
+    See $FONT_SIZES, $TEXT_ALIGN, $FONT_WEIGHTS, $COLORS maps above for references.
+    Variables name example: --title-center-semibold-red
+ */
+/*
+    to use styles without modifier class on .inline-icon
+    use @extend
+
+    e.g. style icon on parent hover:
+        a:hover .inline-icon {
+            @extend %inline-icon.active;
+        }
+*/
+/**
+ * Define Breakpoints here.
+ */
 .dc-hint-box {
   display: inline-flex;
   align-items: center;
@@ -9851,6 +9999,8 @@
   border-radius: 4px; }
   .dc-hint-box--info {
     background-color: var(--transparent-info); }
+  .dc-hint-box--warn {
+    background-color: rgba(255, 173, 58, 0.16); }
   .dc-hint-box__icon {
     margin-right: 8px; }
   .dc-hint-box__message {
@@ -13180,12 +13330,12 @@
   .dc-select-native--hide-selected-value {
     margin-left: 10px;
     width: 40px; }
+    .dc-select-native--hide-selected-value .dc-select-native__wrapper {
+      width: 40px; }
   .dc-select-native__wrapper {
     height: 38px; }
     .dc-select-native__wrapper .dc-input {
       margin-bottom: 0px; }
-    .dc-select-native__wrapper--hide-selected-value {
-      width: 40px; }
   .dc-select-native__arrow {
     position: absolute;
     right: 1.2rem;
@@ -16954,6 +17104,177 @@
 /**
  * Define Breakpoints here.
  */
+.terms-of-use {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  margin: 0 8rem 0.8rem; }
+
+.terms-of-use .dc-checkbox__label {
+  font-size: 1.4rem;
+  color: var(--text-general);
+  font-weight: 400;
+  text-transform: none;
+  text-align: left;
+  line-height: 1.5;
+  text-transform: none;
+  color: var(--text-general); }
+
+.terms-of-use__checkbox {
+  margin-top: 1.6rem; }
+
+.terms-of-use__hr {
+  height: 2px;
+  margin: 1.6rem 0 0;
+  width: 100%;
+  border-top: 1px solid var(--general-section-1); }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .terms-of-use__hr {
+    border-top-width: 2px;
+    border-color: var(--border-disabled);
+    width: 100%; } }
+
+.terms-of-use h4 {
+  font-size: 1.4rem;
+  color: var(--text-general);
+  font-weight: 700;
+  text-transform: none;
+  text-align: left;
+  line-height: 1.5;
+  margin: 1rem 0;
+  text-transform: none;
+  color: var(--text-general); }
+
+.terms-of-use p {
+  font-size: 1.4rem;
+  color: var(--text-general);
+  font-weight: 400;
+  text-transform: none;
+  text-align: left;
+  line-height: 1.5;
+  text-transform: none;
+  color: var(--text-general); }
+
+.terms-of-use input {
+  display: none; }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .terms-of-use {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0 2.4rem 10rem;
+    overflow-y: auto; }
+  .terms-of-use .dc-checkbox__box {
+    width: 2.4rem;
+    height: 2.4rem; }
+  .terms-of-use .dc-checkbox__box .dc-icon {
+    width: 2.4rem;
+    height: 2.4rem; } }
+
+/*------------------------------------*
+ *  # Constants
+ *------------------------------------*/
+/* stylelint-disable color-no-hex */
+/* COLOR PALETTE */
+/* colors */
+/* alpha colors */
+/* gradient colors */
+/* Preserve legacy variables */
+/* Primary */
+/* stylelint-enable color-no-hex */
+/* Wallet gradient background */
+/* App Cards gradient background */
+/*------------------------------------*
+ *  # SASS Mixins and Functions
+ *------------------------------------*/
+/*
+ * SASS interpolation
+ */
+/*
+ * PX to EM
+ * @param $px - px value to be converted
+ * @param $base - base font size (in `em`)
+ * Note: 'em' values are calculate based on the element font-size
+ *       to properly converts 'px' to 'em', please pass in the element font-size with it
+ * Usage example:
+    padding: em(16px, 1.6em); // font-size in 'em'
+ */
+/*
+ * Set property by passing a property name, and values.
+ * @param $property name - padding, margin etc.
+ * @param $values        - values in `px` (space separated for multiple values)
+ * @param $font-size     - base font-size in `em`
+ * Usage example:
+   @include toEm(padding, 8px 16px 8px, 1.6em);
+ */
+/*
+ * Generate typefaces key-value pair of variable name and config
+ * Example:
+   --paragraph-center-bold-black: (14px, center, bold, black)
+ */
+/*
+ * Sets font-size, font-weight, color, text-transform, text-align and line-height
+ * Usage example:
+   @include setTypeface(16px, bold, black, uppercase);
+ */
+/*
+ * Set typefaces by passing a typeface variable name
+ * @param $var   - typeface variable
+ * @param $tt    - text-transform property
+ * @param $align - text-align property
+ * Usage example:
+   @include typeface(--paragraph-bold-black, uppercase, center);
+ */
+/*
+ * Range Slider Thumb styling is set here
+ */
+/*
+ * SVG icons colors
+ */
+/*
+ * Bar Spinner Animation
+ * @param $count    - number of bars
+ * @param $duration - duration of animation
+ * @param $phase    - each bar phase change delay
+ * Usage example:
+   @include createBarspinnerAnimation(5, 1.2s, 0,1);
+ */
+/*
+ * Tooltip colors
+ * @param $color - color property
+ * Usage example:
+   @include tooltipColor($COLOR_RED);
+ */
+/*
+ * Convert Tooltip colors
+ * @param $color - css color property
+ * Usage example:
+   @include convertTooltipColor(var(--status-default));
+ */
+/*
+    Constants
+*/
+/*
+    Variables
+*/
+/*
+    List of all typefaces variables in the format: --$FONT_SIZES-$TEXT_ALIGN-$FONT_WEIGHTS-COLORS.
+    See $FONT_SIZES, $TEXT_ALIGN, $FONT_WEIGHTS, $COLORS maps above for references.
+    Variables name example: --title-center-semibold-red
+ */
+/*
+    to use styles without modifier class on .inline-icon
+    use @extend
+
+    e.g. style icon on parent hover:
+        a:hover .inline-icon {
+            @extend %inline-icon.active;
+        }
+*/
+/**
+ * Define Breakpoints here.
+ */
 .currency-list {
   width: 100%; }
   .currency-list form {
@@ -17191,6 +17512,12 @@
     .details-form {
       overflow-x: hidden;
       overflow-y: auto; } }
+  @media (min-width: 1024px) {
+    .details-form__sub-header {
+      margin: 0 4rem 4rem; } }
+  @media (min-width: 320px) and (max-width: 767px) {
+    .details-form__sub-header {
+      margin-bottom: 0.8rem; } }
   .details-form__elements {
     flex-grow: 1;
     margin: 1.2rem auto;
@@ -17289,169 +17616,6 @@
         margin: 0 2.4rem;
         line-height: 20px;
         color: var(--text-less-prominent); } }
-
-/*------------------------------------*
- *  # Constants
- *------------------------------------*/
-/* stylelint-disable color-no-hex */
-/* COLOR PALETTE */
-/* colors */
-/* alpha colors */
-/* gradient colors */
-/* Preserve legacy variables */
-/* Primary */
-/* stylelint-enable color-no-hex */
-/* Wallet gradient background */
-/* App Cards gradient background */
-/*------------------------------------*
- *  # SASS Mixins and Functions
- *------------------------------------*/
-/*
- * SASS interpolation
- */
-/*
- * PX to EM
- * @param $px - px value to be converted
- * @param $base - base font size (in `em`)
- * Note: 'em' values are calculate based on the element font-size
- *       to properly converts 'px' to 'em', please pass in the element font-size with it
- * Usage example:
-    padding: em(16px, 1.6em); // font-size in 'em'
- */
-/*
- * Set property by passing a property name, and values.
- * @param $property name - padding, margin etc.
- * @param $values        - values in `px` (space separated for multiple values)
- * @param $font-size     - base font-size in `em`
- * Usage example:
-   @include toEm(padding, 8px 16px 8px, 1.6em);
- */
-/*
- * Generate typefaces key-value pair of variable name and config
- * Example:
-   --paragraph-center-bold-black: (14px, center, bold, black)
- */
-/*
- * Sets font-size, font-weight, color, text-transform, text-align and line-height
- * Usage example:
-   @include setTypeface(16px, bold, black, uppercase);
- */
-/*
- * Set typefaces by passing a typeface variable name
- * @param $var   - typeface variable
- * @param $tt    - text-transform property
- * @param $align - text-align property
- * Usage example:
-   @include typeface(--paragraph-bold-black, uppercase, center);
- */
-/*
- * Range Slider Thumb styling is set here
- */
-/*
- * SVG icons colors
- */
-/*
- * Bar Spinner Animation
- * @param $count    - number of bars
- * @param $duration - duration of animation
- * @param $phase    - each bar phase change delay
- * Usage example:
-   @include createBarspinnerAnimation(5, 1.2s, 0,1);
- */
-/*
- * Tooltip colors
- * @param $color - color property
- * Usage example:
-   @include tooltipColor($COLOR_RED);
- */
-/*
- * Convert Tooltip colors
- * @param $color - css color property
- * Usage example:
-   @include convertTooltipColor(var(--status-default));
- */
-/*
-    Constants
-*/
-/*
-    Variables
-*/
-/*
-    List of all typefaces variables in the format: --$FONT_SIZES-$TEXT_ALIGN-$FONT_WEIGHTS-COLORS.
-    See $FONT_SIZES, $TEXT_ALIGN, $FONT_WEIGHTS, $COLORS maps above for references.
-    Variables name example: --title-center-semibold-red
- */
-/*
-    to use styles without modifier class on .inline-icon
-    use @extend
-
-    e.g. style icon on parent hover:
-        a:hover .inline-icon {
-            @extend %inline-icon.active;
-        }
-*/
-/**
- * Define Breakpoints here.
- */
-.terms-of-use {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  margin: 0 8rem 0.8rem; }
-  .terms-of-use .dc-checkbox__label {
-    font-size: 1.4rem;
-    color: var(--text-general);
-    font-weight: 400;
-    text-transform: none;
-    text-align: left;
-    line-height: 1.5;
-    text-transform: none;
-    color: var(--text-general); }
-  .terms-of-use__checkbox {
-    margin-top: 1.6rem; }
-  .terms-of-use__hr {
-    height: 2px;
-    margin: 1.6rem 0 0;
-    width: 100%;
-    border-top: 1px solid var(--general-section-1); }
-    @media (min-width: 320px) and (max-width: 767px) {
-      .terms-of-use__hr {
-        border-top-width: 2px;
-        border-color: var(--border-disabled);
-        width: 100%; } }
-  .terms-of-use h4 {
-    font-size: 1.4rem;
-    color: var(--text-general);
-    font-weight: 700;
-    text-transform: none;
-    text-align: left;
-    line-height: 1.5;
-    margin: 1rem 0;
-    text-transform: none;
-    color: var(--text-general); }
-  .terms-of-use p {
-    font-size: 1.4rem;
-    color: var(--text-general);
-    font-weight: 400;
-    text-transform: none;
-    text-align: left;
-    line-height: 1.5;
-    text-transform: none;
-    color: var(--text-general); }
-  .terms-of-use input {
-    display: none; }
-  @media (min-width: 320px) and (max-width: 767px) {
-    .terms-of-use {
-      overflow-x: hidden;
-      margin: 0;
-      padding: 0 2.4rem 10rem;
-      overflow-y: auto; }
-      .terms-of-use .dc-checkbox__box {
-        width: 2.4rem;
-        height: 2.4rem; }
-        .terms-of-use .dc-checkbox__box .dc-icon {
-          width: 2.4rem;
-          height: 2.4rem; } }
 
 /*------------------------------------*
  *  # Constants
@@ -19462,6 +19626,7 @@ strong {
     --general-main-2: #ffffff;
     --general-section-1: #f2f3f4;
     --general-section-2: #f2f3f4;
+    --general-section-3: #fafafa;
     --general-disabled: #eaeced;
     --general-hover: #e6e9e9;
     --general-active: #d6dadb;
@@ -19547,6 +19712,7 @@ strong {
     --general-main-2: #151717;
     --general-section-1: #151717;
     --general-section-2: #0e0e0e;
+    --general-section-3: #242828;
     --general-disabled: #1d1f20;
     --general-hover: #242828;
     --general-active: #323738;
